# longboard

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  diesel.toml  schema.patch
benches/: bench.rs
contrib/: PKGBUILD  dev-config.yaml  longboard.5  longboard.8  longboard.service.m4  longctl.1
contrib/config/: dev.yaml  names.txt  notice.md  release.yaml  release.yaml.m4
contrib/config/pages/: home.md  rules.md
migrations/2020-02-26-144909_create_tables/: down.sql  up.sql
migrations/2020-02-28-192003_create_table_file/: up.sql
migrations/2020-03-07-151133_create_table_report/: up.sql
migrations/2020-03-07-175306_add_delete_hash/: down.sql  up.sql
migrations/2020-03-07-190935_default_time/: down.sql  up.sql
migrations/2020-03-09-080459_require_name/: up.sql
migrations/2020-03-09-084628_add_spoiler_file/: down.sql  up.sql
migrations/2020-03-09-193751_add_post_board/: down.sql  up.sql
migrations/2020-03-10-163055_create_table_staff/: down.sql  up.sql
migrations/2020-03-11-035454_create_table_session/: up.sql
migrations/2020-03-15-061150_add_table_user/: down.sql  up.sql
migrations/2020-04-07-184112_add_pin_and_lock/: down.sql  up.sql
migrations/2020-04-07-215113_add_user_note/: down.sql  up.sql
migrations/2020-04-14-141701_add_user_ip/: down.sql  up.sql
migrations/2020-04-16-205922_add_table_staff_action/: down.sql  up.sql
migrations/2020-04-19-194218_add_bump_date/: down.sql  up.sql
migrations/2020-04-19-203600_add_no_bump/: down.sql  up.sql
migrations/2020-05-04-203819_file_not_null/: down.sql  up.sql
res/script/: all.js  thread.js
res/static/: style.css
res/static/styles/: base.css
res/style/: base-colors.css  base-fonts.css  base.css  blood-colors.css  blood.css  custom-page.css  dark-colors.css  dark.css  default.css  light-colors.css  light.css  nautical-colors.css  nautical.css  peace-colors.css  peace.css  yotsuba-colors.css  yotsuba.css
res/styles/: base.css
res/templates/: board-header.html.hbs  catalog-nav.html.hbs  notice.html.hbs  page-nav.html.hbs  staff-nav.html.hbs
res/templates/actions/: delete.html.hbs  report.html.hbs
res/templates/error/: 400.html.hbs  404.html.hbs  500.html.hbs
res/templates/layout/: 400.html.hbs  board.html.hbs  error.html.hbs  home.html.hbs  page.html.hbs  thread.html.hbs
res/templates/layout/action/: action-success.html.hbs  action.html.hbs  delete.html.hbs  report.html.hbs
res/templates/layout/error/: 400.html.hbs  404.html.hbs  500.html.hbs  error.html.hbs
res/templates/layout/model/: board.html.hbs  model.html.hbs  thread.html.hbs
res/templates/models/: board-catalog-item.html.hbs  board.html.hbs  file.html.hbs  post.html.hbs  recent-file.html.hbs  recent-post.html.hbs  thread-subject.html.hbs  thread.html.hbs
res/templates/new-forms/: new-form.html.hbs  new-post-form.html.hbs  new-thread-form.html.hbs
res/templates/pages/: custom-page.html.hbs  form-help.html.hbs  home.html.hbs  options.html.hbs  page.html.hbs
res/templates/pages/actions/: action-success.html.hbs  action.html.hbs  delete-post.html.hbs  delete-thread.html.hbs  delete.html.hbs  (+1 more)
res/templates/staff/: board-row.html.hbs  report-row.html.hbs  report.html.hbs  user-row.html.hbs
res/templates/view/: banner.html.hbs  board-header.html.hbs  board.html.hbs  form.html.hbs  new-post-form.html.hbs  new-thread-form.html.hbs  notice.html.hbs  post.html.hbs  thread.html.hbs
src/: config.rs  error.rs  lib.rs  models.rs  parse.rs  routes.rs  schema.rs  schema.rs.orig  schema.rs.rej  views.rs
src/models/: board.rs  mod.rs  post.rs  staff.rs  thread.rs
src/routes/: create.rs  mod.rs  new.rs  options.rs  staff.rs
src/views/: error.rs  mod.rs  staff.rs
(+23 files in other folders)
