# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "longboard"
version = "1.1.0"
authors = ["set <set@hierophant.club>"]
description = "Imageboard engine."
edition = "2021"
default-run = "longboard"

[[bin]]
name = "longboard"
path = "src/bin/longboard.rs"

[[bin]]
name = "longctl"
path = "src/bin/longctl.rs"

[dependencies]
ammonia = "3.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.0"
combine = "4.6"
derive_more = "0.99"
diesel = { version = "2.0", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "2.0"
fern = { version = "0.6", features = ["colored"] }
handlebars = "4.3"
horrorshow = "0.8"
image = "0.24"
log = "0.4"
maplit = "1.0"
mime = "0.3"
mime_guess = "2.0"
multipart = { version = "0.18", default-features = false, features = ["server"] }
parse_duration = "2.1"
pulldown-cmark = "0.9"
r2d2 = "0.8"
rand = "0.8"
regex = "1.6"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = "^0.1.43"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
